[package]
name = "dydx-v3-rust"
version = "0.1.0"
edition = "2021"
authors = ["0xIbuki"]
description = "Rust SDK for dYdX v3 API"
license = "MIT"
keywords = ["sdk", "dydx"]
# documentation = ""
# repository = ""
readme = "README.md"
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
web3 = "0.18.0"
tokio = { version= "1", features = ["full"] }
tokio-test = "0.4"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
elliptic-curve = "0.11.12"
http = "0.2"
uuid = { version = "0.8", features = ["v5"] }
sha2 = "0.10.2"
hmac = "0.12.1"
chrono = "0.4"
base64 = "0.13.0"
readonly = "0.2.0"
rand = "0.8.5"
secp256k1 = "0.22.1"
dotenv = "0.15.0"
rust-crypto = "0.2.36"
# eip-712 = "0.1.0"

[dev-dependencies]
speculate = "0.1.2"