[package]
name = "dydx-v3-rust"
version = "0.1.1"
edition = "2021"
authors = ["0xIbuki"]
description = "Rust SDK for dYdX v3 API"
license = "MIT"
keywords = ["sdk", "dydx"]
documentation = "https://docs.rs/dydx-v3-rust/0.1.0/dydx_v3_rust/"
repository = "https://github.com/junta/dydx-v3-rust"
readme = "README.md"
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.pyo3]
version = "0.16.4"
features = ["auto-initialize"]

[dependencies]
hex = "0.4.3"
hex-literal = "0.3"
web3 = "0.18.0"
tokio = { version= "1", features = ["full"] }
tokio-test = "0.4"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
elliptic-curve = "0.11.12"
http = "0.2"
uuid = { version = "0.8", features = ["v5"] }
sha2 = "0.10.2"
hmac = "0.12.1"
chrono = "0.4"
base64 = "0.13.0"
readonly = "0.2.0"
rand = "0.8.5"
secp256k1 = "0.21.2"
dotenv = "0.15.0"
rust-crypto = "0.2.36"
keccak-hash = "0.9.0"
eth-encode-packed = "0.1.0"
ethers-signers = "0.6.2"
ethsign = "0.8.0"

[dev-dependencies]
speculate = "0.1.2"